Add container support for minecraft server