@@ -9,6 +9,8 @@ import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.IOException;
 import java.time.Instant;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
@@ -17,8 +19,8 @@ import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 
 public final class WorldCommandExecutor implements CommandExecutor, TabCompleter {
-    private static final List<String> ROOT_SUBCOMMANDS = List.of("world", "confirm");
-    private static final List<String> WORLD_OPERATIONS = List.of("add", "remove", "delete");
+    private static final List<String> ROOT_SUBCOMMANDS = Arrays.asList("world", "confirm");
+    private static final List<String> WORLD_OPERATIONS = Arrays.asList("add", "remove", "delete");
     private static final long DELETE_CONFIRM_TTL_SECONDS = 30;
 
     private final JavaPlugin plugin;
@@ -35,10 +37,11 @@ public final class WorldCommandExecutor implements CommandExecutor, TabCompleter
 
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
-        if (!(sender instanceof Player player)) {
+        if (!(sender instanceof Player)) {
             sender.sendMessage("Only players can use this command.");
             return true;
         }
+        Player player = (Player) sender;
 
         if (args.length < 1) {
             sendUsage(sender);
@@ -86,7 +89,7 @@ public final class WorldCommandExecutor implements CommandExecutor, TabCompleter
                 "user".equalsIgnoreCase(args[3])) {
             action = "member_" + args[2].toLowerCase(Locale.ROOT);
             target = args[4];
-            if (target.isBlank()) {
+            if (target.trim().isEmpty()) {
                 sender.sendMessage("Target user is required.");
                 return true;
             }
@@ -107,14 +110,14 @@ public final class WorldCommandExecutor implements CommandExecutor, TabCompleter
             player.sendMessage("[MCMM] 当前没有待确认的删除请求。");
             return true;
         }
-        if (Instant.now().isAfter(pending.expiresAt())) {
+        if (Instant.now().isAfter(pending.expiresAt)) {
             pendingDeletes.remove(player.getUniqueId());
             player.sendMessage("[MCMM] 删除确认已过期，请重新执行 /mcmm world <world_alias> delete");
             return true;
         }
 
         pendingDeletes.remove(player.getUniqueId());
-        return dispatch(player, "delete", pending.worldAlias(), "", "已删除世界 \"" + pending.worldAlias() + "\"（删除流程已提交）");
+        return dispatch(player, "delete", pending.worldAlias, "", "已删除世界 \"" + pending.worldAlias + "\"（删除流程已提交）");
     }
 
     private boolean dispatch(Player player, String action, String worldAlias, String target, String successHint) {
@@ -136,11 +139,11 @@ public final class WorldCommandExecutor implements CommandExecutor, TabCompleter
                     target
             );
             player.sendMessage("[MCMM] status=" + response.statusCode());
-            if (response.body() != null && !response.body().isBlank()) {
+            if (response.body() != null && !response.body().trim().isEmpty()) {
                 player.sendMessage("[MCMM] " + response.body());
             }
             return true;
-        } catch (IOException | InterruptedException e) {
+        } catch (IOException e) {
             plugin.getLogger().warning("backend request failed: " + e.getMessage());
             player.sendMessage("[MCMM] request failed: " + e.getMessage());
             return true;
@@ -168,17 +171,25 @@ public final class WorldCommandExecutor implements CommandExecutor, TabCompleter
             return out;
         }
         if (args.length == 2 && "world".equalsIgnoreCase(args[0])) {
-            return List.of("create", "<world_alias>");
+            return Arrays.asList("create", "<world_alias>");
         }
         if (args.length == 3 && "world".equalsIgnoreCase(args[0])) {
             return WORLD_OPERATIONS;
         }
         if (args.length == 4 && "world".equalsIgnoreCase(args[0]) &&
                 ("add".equalsIgnoreCase(args[2]) || "remove".equalsIgnoreCase(args[2]))) {
-            return List.of("user");
+            return Collections.singletonList("user");
         }
-        return List.of();
+        return Collections.emptyList();
     }
 
-    private record PendingDelete(String worldAlias, Instant expiresAt) {}
+    private static final class PendingDelete {
+        private final String worldAlias;
+        private final Instant expiresAt;
+
+        private PendingDelete(String worldAlias, Instant expiresAt) {
+            this.worldAlias = worldAlias;
+            this.expiresAt = expiresAt;
+        }
+    }
 }
